fix newline at end of file add env to json converter fix data/configs/config.json.example formatting

--- a/data/configs/config.json.example
+++ b/data/configs/config.json.example
@@ -1,9 +1,11 @@
-{"telegram": {
-  "bot-token": ""
-},
-"redis": {
-  "ip": "localhost",
-  "port": 6379,
-  "database": 0,
-  "password": null
-}}
+{
+  "telegram": {
+    "bot-token": ""
+  },
+  "redis": {
+    "ip": "localhost",
+    "port": 6379,
+    "database": 0,
+    "password": null
+  }
+}
