Add/support docker (#4)
* add support docker

* add newline at end of .gitignore

* fix newline at end of file
add env to json converter
fix data/configs/config.json.example formatting

Co-authored-by: Francesco Zimbolo <fra.zimbolo@stud.uniroma3.it>

--- a/.dockerignore
+++ b/.dockerignore
@@ -127,7 +127,14 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-#ignore config file
-config.env
-data/configs/config.json
+.idea/
+data/configs/confing.json.example
+*.yml
+.gitignore
+.dockerignore
+Dockerfile
+docker-compose*
+LICENSE
+AUTHORS
+*.md
+*.env
