--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -3,11 +3,7 @@
 
 name: Bot Base Tests
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 jobs:
   Lint:
@@ -29,3 +25,4 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         invoke lint
+        invoke test
